--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+Feature Update 1.3.0
+    - Bot now responds to "@everyone" mentions with an appropriate meme.
+    - Fixed bug where empty message body throws IndexOutOfBoundsException
+
 Performance Update 1.2.6
     - ClearText uses block deletion when possible to reduce jumpiness and increase response time.
     - Fixed bug where passing !clear a non-integer threw an un-caught exception.
